<?xml version="1.0"?>
<package format="2">
  <name>movie_publisher</name>
  <version>1.1.2</version>
  <description>Node for using a video file as video topic source.</description>

  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>
  
  <url type="website">http://www.ros.org/wiki/movie_publisher</url>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>bag_tools</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ffmpeg</exec_depend>
  <exec_depend>libav</exec_depend>
  <exec_depend>python-imageio</exec_depend>
  <exec_depend>python-moviepy-pip</exec_depend> <!-- recommended but optional dependency -->
  <exec_depend>python-opencv</exec_depend>
  <exec_depend version_gte="1.0.2">rosbash_params</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
